# crc_scripts

./: .gitignore  AHF.py  README.md  analytic_dust_yields.py  calculate.py  config.py  constant.py  cosmo_plots.py  cosmo_precompile_data.py  dust_plots.py  galaxy.py  gas_temperature.py  gizmo.py  movie_maker.sh  non_cosmo_plots.py  non_cosmo_precompile_data.py  non_cosmo_snapshot_comparison.py  non_cosmo_test.py  observations.py  paper_plots.py  particle.py  plot_setup.py  plots.pbs  plots.sbatch  precompile.pbs  precompile_data.py  pyproject.toml  readsnap.py  setup.py  snap_checker.py  snapshot.py  snapshot_plots.py  tasz.py  test.pbs  test.py  test.sbatch  utils.py  xma_cosmology.py
analytical_models/: dust_accretion.py  stellar_yields.py
gizmo_lib/: AHF.py  colors.py  galaxy.py  particle.py  rockstar.py  snapshot.py  utils.py  visual.py
gizmo_library/: AHF.py  config.py  coordinate.py  galaxy.py  particle.py  shieldLengths.py  sightline.py  snapshot.py  time_evolution.py  utils.py
observations/: dust_obs.py
src/crc_scripts/: FIRE2_snapshot_scale-factors.txt  FIRE3_snapshot_scale-factors.txt  config.py  coordinate_utils.py  data_calc_utils.py  figure.py  math_utils.py  plot_functions.py  plot_utils.py
src/crc_scripts/analysis/: data_reduction.py  sightline.py  time_evolution.py
src/crc_scripts/analytical_models/: dust_accretion.py  grain_size_evo.py  stellar_yields.py
src/crc_scripts/deprecated_code/: time_evolution.py
src/crc_scripts/io/: AHF.py  galaxy.py  gizmo.py  particle.py  snap_utils.py  snapshot.py
src/crc_scripts/observations/: dust_obs.py  (+1 more)
(+14 files in other folders)
